# Cpp-space-invaders

./: CMakeLists.txt  README.md  valgrind-command.txt
src/: Makefile  SpaceGame  alien.cpp  alien.h  fire.cpp  fire.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  spaceship.cpp  spaceship.h  spirit.h
